--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     
     <title>React App</title>
+    <script src="https://kit.fontawesome.com/4ef55b311e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
